force-app/main/default/objects/nXBI__Business_Credit_Bankruptcy_Information__c/nXBI__Business_Credit_Bankruptcy_Information__c.object-meta.xml
<CustomObject>
    <label>Business Credit Bankruptcy Information</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Bankruptcy Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Bankruptcy Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>