force-app/main/default/objects/nXBI__Business_Credit_Bankruptcy_Information__c/fields/nXBI__Business_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Business_Credit_Report__c</fullName>
    <label>Business Credit Report</label>
    <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
    <relationshipName>Bankruptcy_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>