force-app/main/default/objects/nXBI__Business_Credit_Bankruptcy_Information__c/fields/nXBI__Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Date_Filed__c</fullName>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>