force-app/main/default/objects/nXBI__Business_Credit_Bankruptcy_Information__c/fields/nXBI__Document_Number__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Document_Number__c</fullName>
    <label>Document Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>