force-app/main/default/objects/nXBI__Business_Credit_Bankruptcy_Information__c/fields/nXBI__Exempt_Amount__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Exempt_Amount__c</fullName>
    <label>Exempt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>