force-app/main/default/objects/nXBI__Business_Credit_Bankruptcy_Information__c/fields/nXBI__Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Total_Assets__c</fullName>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>